--- a/test/index.html
+++ b/test/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Lyrics</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Feelow</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>음악 가사 가져오기</h1>
-        <input type="text" id="searchInput" placeholder="가사를 검색하세요">
-        <button onclick="searchLyrics()">가사 검색</button>
-        <div id="lyrics"></div>
-    </div>
-    <script src="script.js"></script>
+<div class="container">
+  <h2>오늘 하루는 어떠셨나요?<br> 맞춤 노래를 추천해드릴게요!</h2>
+  <textarea id="emotionInput" placeholder="오늘 하루 인상깊었던 이야기를 적어주세요"></textarea>
+  <button onclick="saveEmotion()">저장하기</button>
+  <p id="emotionDisplay"></p>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
